refactor: Add private constructor to get stablity